# nnu_ros_2025

./: README.md  daedalus_ros.service  launch_ros.sh
daedalus_core/: CMakeLists.txt  package.xml  setup.py
daedalus_core/config/: arm_positions.yaml  mission_params.yaml
daedalus_core/launch/: config.launch  mission.launch  mission_test.launch
daedalus_core/nodes/: detector  mission_state_machine
daedalus_core/src/daedalus_core/: detector.py  pcs_move_states.py  pcs_states.py
daedalus_core/src/daedalus_core/daedalus_services/: services.py
daedalus_msgs/: CMakeLists.txt  package.xml
daedalus_msgs/msg/: teensy_message.msg
daedalus_msgs/srv/: inhibit_detection.srv
teensy_core/: CMakeLists.txt  package.xml
teensy_core/include/: move_manager.h  teensy_comm.h
teensy_core/launch/: move_manager.launch  movement_test.launch  teensy_interface.launch
teensy_core/src/: move_manager.cpp  teensy_comm.cpp  teensy_interface.cpp
