<?xml version="1.0"?>
<package format="2">
  <name>daedalus_msgs</name>
  <version>0.0.0</version>
  <description>The daedalus_msgs package</description>

  <maintainer email="markpi@todo.todo">markpi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
